Improve Gradle-based build and integration testing